--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" required><br>
+
+		<label for="email">Email</label>
+		<input type="email" id="email" required><br>
+
+		<label >Gender</label>
+		<input type="radio" id="male" value="male" name="male" required>
+		<label for="male">Male</label>
+		<input type="radio" id="female" value="female" name="female" >
+		<label for="female">Female</label>
+		<input type="radio" id="other" value="other" name="other" >
+		<label for="other">Other</label><br>
+
+		<label>Car Brands</label>
+		<select id="cars" name="cars">
+			<option value="bmw">BMW</option>
+			<option value="audi">Audi</option>
+			<option value="mercedez">Mercedez</option>
+		</select><br>
+
+		<label for="carage"> Car Age</label>
+		<input name="carage" id="carage" type="number" required><br>
+
+		<label for="dop">Date of Purchase(dop)</label>
+		<input type="date" name="dop" id="dop" required><br>
+
+		<label for="password">Password</label>
+		<input type="password" id="password" name="password"><br>
+
+		<button type="submit">Submit</button>
+		
+		
+		
+		
+		
+		
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
