--- a/main.html
+++ b/main.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Signup Form</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<form>
-		<label for="name">Name</label>
-		<input type="text" id="name" required><br>
 
-		<label for="email">Email</label>
-		<input type="email" id="email" required><br>
+  <form method="post">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Name" required><br>
 
-		<label >Gender</label>
-		<input type="radio" id="male" value="male" name="male" required>
-		<label for="male">Male</label>
-		<input type="radio" id="female" value="female" name="female" >
-		<label for="female">Female</label>
-		<input type="radio" id="other" value="other" name="other" >
-		<label for="other">Other</label><br>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Email" required><br>
 
-		<label>Car Brands</label>
-		<select id="cars" name="cars">
-			<option value="bmw">BMW</option>
-			<option value="audi">Audi</option>
-			<option value="mercedez">Mercedez</option>
-		</select><br>
+    <label>Gender</label>
+    <input type="radio" id="gender_m" name="gender" value="male" required>
+    <label for="gender_m">Male</label>
+    <input type="radio" id="gender_f" name="gender" value="female">
+    <label for="gender_f">Female</label><br>
 
-		<label for="carage"> Car Age</label>
-		<input name="carage" id="carage" type="number" required><br>
+    <label for="cars">Car Brands</label>
+    <select id="cars" name="cars" required>
+      <option value="">--Please choose an option--</option>
+      <option value="bmw">BMW</option>
+      <option value="audi">Audi</option>
+      <option value="mercedes">Mercedes</option>
+    </select><br>
 
-		<label for="dop">Date of Purchase(dop)</label>
-		<input type="date" name="dop" id="dop" required><br>
+    <label for="age">Age</label>
+    <input type="number" id="age" name="age" placeholder="Age" required><br>
 
-		<label for="password">Password</label>
-		<input type="password" id="password" name="password"><br>
+    <label for="dob">DOB</label>
+    <input type="date" id="dob" name="dob" required><br>
 
-		<button type="submit">Submit</button>
-		
-		
-		
-		
-		
-		
-		
-	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <label for="tel">Phone Number</label>
+    <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx"><br>
 
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" placeholder="Password" required><br>
+
+    <label for="tos">
+      <input type="checkbox" id="tos" name="tos" required>
+      I agree to the TOS
+    </label><br>
+
+    <button type="submit">Submit</button>
+  </form>
+
+  <script src="./script.js"></script>
 </body>
-
 </html>
